--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       </div>
     </nav>
   </header>
-
+  <main>
+    <div class="banner-container">
+      <h1> </h1>
+    </div>
+    <div>
+      <img src="logo.png" alt="">
+    </div>
+  </main>
 </body>
 
 </html>
