--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,11 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/LOGO/title logo.jpg" type="image/x-icon">
   <title>First website</title>
+  <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
   <header>
-
+    <nav>
+      <div class="manu-containor">
+        <div class="logo"><img class="logo-photo" src="/LOGO/logo-light.png" alt=""></div>
+        <div class="manu"></div>
+        <div class="manu">
+          <li class="item">Home</li>
+          <li class="item">Help</li>
+          <li class="item">Downloads</li>
+          <li class="item">About Us</li>
+        </div>
+      </div>
+    </nav>
   </header>
   <main>
     <section></section>
