--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+  <!-- This is a navbar section -->
   <header>
     <nav>
       <div class="manu-containor">
         <div class="logo"><img class="logo-photo" src="/LOGO/logo-light.png" alt=""></div>
-        <div class="manu"></div>
-        <div class="manu">
+        <div class="meanu">
           <li class="item">Home</li>
           <li class="item">Help</li>
           <li class="item">Downloads</li>
@@ -26,7 +26,16 @@
     </nav>
   </header>
   <main>
-    <section></section>
+    <section>
+      <div class="bannar-containor">
+        <div class="bannar-text">
+          <h1 class="title">Better design for your digital products</h1>
+          <p class="description">We are a creative studio specializing in UI/UX design, development and strategy.</p>
+          <button class="btm">Explore more</button>
+        </div>
+        <div class="bannar-photo"><img class="bannar-img" src="/IMG/banner.png" alt="bannar-image"></div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
