--- a/HTML/index.html
+++ b/HTML/index.html
@@ -36,6 +36,22 @@
         <div class="bannar-photo"><img class="bannar-img" src="/IMG/banner.png" alt="bannar-image"></div>
       </div>
     </section>
+    <section>
+      <div class="header">
+        <h1>About Us</h1>
+      </div>
+      <div>
+        <div class="description2">
+          <h2>We grow brands through bold & strategic creative</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eaque dolorum, odit alias tempora
+            reiciendis
+            laudantium recusandae non distinctio esse voluptatum dolor ratione doloribus iure numquam quas iste, optio
+            ipsam!</p>
+        </div>
+        <div class="section-photo"><img class="section-imge" src="/IMG/section.png" alt=""></div>
+        <button>Contact With Us</button>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
