--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="/LOGO/title logo.jpg" type="image/x-icon">
   <title>First website</title>
   <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="stylesheet" href="/CSS/about.css">
 </head>
 
 <body>
@@ -40,16 +41,15 @@
       <div class="header">
         <h1>About Us</h1>
       </div>
-      <div>
+      <div class="main">
         <div class="description2">
-          <h2>We grow brands through bold & strategic creative</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eaque dolorum, odit alias tempora
-            reiciendis
-            laudantium recusandae non distinctio esse voluptatum dolor ratione doloribus iure numquam quas iste, optio
-            ipsam!</p>
+          <h2 class="sub-heading">We grow brands through<br>
+            bold & strategic creative</h2>
+          <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="contact"><button class="last">Contact With Us</button></div>
         </div>
         <div class="section-photo"><img class="section-imge" src="/IMG/section.png" alt=""></div>
-        <button>Contact With Us</button>
       </div>
     </section>
   </main>
