--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,6 +37,7 @@
         <div class="bannar-photo"><img class="bannar-img" src="/IMG/banner.png" alt="bannar-image"></div>
       </div>
     </section>
+    <!-- This is about us section -->
     <section>
       <div class="header">
         <h1>About Us</h1>
@@ -52,6 +53,80 @@
         <div class="section-photo"><img class="section-imge" src="/IMG/section.png" alt=""></div>
       </div>
     </section>
+    <!-- This is our service's section -->
+    <section>
+      <div class="back">
+        <div class="header">
+          <h1 class="service">Our Service's</h1>
+        </div>
+        <div class="art">
+          <div class="digital">
+            <img class="icon" src="/ICON/0.png" alt="icon">
+            <h2 class="fun">Digital Art</h2>
+            <p class="white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint natus obcaecati molestiae
+              ipsam pariatur
+              possimus. Enim
+              modi nam velit sequi!</p>
+            <button class="detials">details</button>
+          </div>
+          <div class="digital">
+            <img class="icon" src="/ICON/0.png" alt="icon">
+            <h2 class="fun">Digital Art</h2>
+            <p class="white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint natus obcaecati molestiae
+              ipsam pariatur
+              possimus. Enim
+              modi nam velit sequi!</p>
+            <button class="detials">details</button>
+          </div>
+          <div class="digital">
+            <img class="icon" src="/ICON/0.png" alt="icon">
+            <h2 class="fun">Digital Art</h2>
+            <p class="white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint natus obcaecati molestiae
+              ipsam pariatur
+              possimus. Enim
+              modi nam velit sequi!</p>
+            <button class="detials">details</button>
+          </div>
+
+        </div>
+        <!-- This is last section -->
+        <div class="ant">
+          <div class="end">
+            <div class="one">
+              <img class="logo-light" src="/LOGO/logo-light.png" alt="logo-light">
+              <p class="option">Auctor blandit dolorem<br>
+                primis eius odit soluta<br>
+                molestie? Malesuada<br>
+                elementum aut doloremque<br>
+                labo</p>
+            </div>
+            <div class="tow">
+              <h2 class="fun">Useful Links</h2>
+              <li class="option">About us</li>
+              <li class="option">Careers</li>
+              <li class="option">News & Artciles</li>
+              <li class="option">legal Notice</li>
+            </div>
+            <div class="three">
+              <h2 class="fun"> Supports</h2>
+              <li class="option">Help Center</li>
+              <li class="option">Contact Us
+              <li class="option">FAQ</li>
+              <li class="option">Parent Community</li>
+            </div>
+            <div class="four">
+              <h2 class="fun">Contact Information</h2>
+              <li class="option">Feel free to contact & reach us !!</li>
+              <li class="option">3557 Derek Drive, Orlando,Florida</li>
+              <li class="option">+1(456)657-887</li>
+              <li class="option">info@domain.com</li>
+            </div>
+          </div>
+          <p class="final">Copyright <span class="span">c</span> 2022 Agence.All rights reserved.</p>
+        </div>
+      </div>
+    </section>
+
   </main>
   <footer></footer>
 </body>
